--- a/control-plane/frontend/index.html
+++ b/control-plane/frontend/index.html
@@ -3,7 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Camel Platform - Control Plane</title>
+    <title>CamelPlatform - Integration Control-Plane</title>
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
